--- a/pages/projects.html
+++ b/pages/projects.html
@@ -219,7 +219,7 @@ function endScreen() {
   );
 }
 </script>  </div>
-   <div class="flexbox-item item-2">This is my gumball catching project from ap computer science. The goal is to catch as many gumballs as possible! The catch is that the gumballs speed gets faster and faster as you go.
+   <div class="flexbox-item item-2">This is my gumball catching project from ap computer science. The goal is to catch as many gumballs as possible! The catch is that the gumballs speed gets faster and faster as you go. One difficulty I had with this project was that I was unable to get the basket to catch the gumballs. I overcame this by having the y value equal the edge of the basket, and if it didnt, you lost!
             </div>
   </div>
     </body>
