--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link rel="stylesheet" type="text/css" href="css/page1.css">
+	<link rel="stylesheet" type="text/css" href="/csPortfolio/css/page1.css">
 
 </head>
 
 <body>
 
-	<img id="banner" src="images/beach.jpg" width="1000" height="100">
+	<img id="banner" src="/csPortfolio/images/beach.jpg" width="1000" height="100">
   <nav class="menu">
 
         <div class="box">
-            <a href="index.html">Home</a>
+            <a href="/csPortfolio/index.html">Home</a>
         </div>
         <div class="box">
-            <a href="pages/contact.html">Contact </a>
+            <a href="/csPortfolio/pages/contact.html">Contact </a>
         </div>
         <div class="box">
-            <a href="pages/projects.html">Projects</a>
+            <a href="/csPortfolio/pages/projects.html">Projects</a>
         </div>
         <div class="box">
-            <a href="pages/deepthoughts.html">DeepThoughts</a>
+            <a href="/csPortfolio/pages/deepthoughts.html">DeepThoughts</a>
         </div>
     </nav>
     <hr>
@@ -38,7 +38,7 @@
             <div class="flexbox-item item-1"> Hello! My name is Sayla Lotysz and I am a senior at Rosemount High School. Computer Science is my favorite subject in school. In my free time I love to hangout with my friends, play lacrosse and travel. My favorite places to travel are to Canada and Florida. Next year, I plan to study business/computer science at Marquette University. I will also be playing women's lacrosse there. Within this portfolio, I have my past projects, contact information, and my deep thoughts.
             </div>
           
-            <div class="flexbox-item item-3"><img id="sayla" src="images/Sayla.jpg" width="200"></div>
+            <div class="flexbox-item item-3"><img id="sayla" src="/csPortfolio/images/Sayla.jpg" width="200"></div>
         </div>
     </div>
     <div id="sketch-div"></div>
