--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link rel="stylesheet" type="text/css" href="../csPortfolio/css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 </head>
 
