--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
 
 <body>
 
-	<img id="banner" src="../csPortfolio/images/beach.jpg" width="1000" height="100">
+	<img id="banner" src="../images/beach.jpg" width="1000" height="100">
   <nav class="menu">
 
         <div class="box">
