--- a/pages/deepthoughts.html
+++ b/pages/deepthoughts.html
@@ -5,17 +5,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 </head>
 
 <body>
 
-	<img id="banner" src="/images/beach.jpg" width="1000" height="100">
+	<img id="banner" src="../images/beach.jpg" width="1000" height="100">
   <nav class="menu">
 
         <div class="box">
-            <a href="../index.html">Home</a>
+            <a href="../csPortfolio/index.html">Home</a>
         </div>
         <div class="box">
             <a href="contact.html">Contact </a>
