--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
   <nav class="menu">
 
         <div class="box">
-            <a href="../csPortfolio/index.html">Home</a>
+            <a href="/csPortfolio/index.html">Home</a>
         </div>
         <div class="box">
             <a href="contact.html">Contact </a>
