--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,17 +5,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
  <script src="https://toolness.github.io/p5.js-widget/p5-widget.js"></script>
 </head>
 
 <body>
 
-	<img id="banner" src="../images/beach.jpg" width="1000" height="100">
+	<img id="banner" src="/images/beach.jpg" width="1000" height="100">
   <nav class="menu">
 
         <div class="box">
-            <a href="/csPortfolio/index.html">Home</a>
+            <a href="../index.html">Home</a>
         </div>
         <div class="box">
             <a href="contact.html">Contact </a>
@@ -30,17 +30,207 @@
 <hr>
     <h1> My Projects:</h1>
     <hr>
-    <h1>Project 1(spring 2021): Gumball Catcher</h1>
-
 
          <div>
         
  
     <div id="sketch-div"></div>
+
+    <h1>Project 2(fall 2021): Animated Jack o Lantern</h1>
+  <div class="flexbox-container">
+        <div class="flexbox-item  item-1">
+            <script type="text/p5" data-height="500" data-autoplay data-preview-width="600">
+            
+var canvasHeight;
+var canvasWidth;
+var pumpWidth;
+var pumpHeight;
+let pumpColor;
+var backgroundColor;
+var pumpCenterx;
+var pumpCentery;
+var pumpnoseLeftx;
+var pumpnoseLefty;
+var pumpnoseRightx;
+var pumpnoseRighty;
+var leftEyecenterx;
+var leftEyecentery;
+var leftEyeleftx;
+var leftEyelefty;
+var leftEyerighty;
+var rightEyecenterx;
+var rightEyecentery;
+var rightEyelefty;
+var rightEyerightx;
+var rightEyerighty;
+var leftPupily;
+var pupilHeight;
+var pupilWidth;
+var on = false;
+var r;
+var g;
+var b;
+
+function setup() {
+  canvasHeight = 400;
+  canvasWidth = 400;
+  createCanvas(canvasWidth, canvasHeight);
+  pumpWidth = 200;
+  pumpHeight = 200;
+  pumpColor = "orange";
+  backgroundColor = flicker();
+  pumpnoseLeftx = 200 - pumpWidth * 0.075;
+  pumpnoseLefty = 200 + pumpHeight * 0.15;
+  pumpnoseRightx = 200 + pumpWidth * 0.075;
+  pumpnoseRighty = 200 + pumpHeight * 0.15;
+  r = 0;
+  g = 0;
+  b = 0;
+
+  leftEyecenterx = pumpnoseLeftx - pumpWidth * 0.125;
+  //times by .125 because that is 25 px in terms of 200
+  leftEyecentery = pumpnoseLefty - pumpHeight * 0.5;
+  leftEyeleftx = pumpnoseLeftx - pumpWidth * 0.25;
+  //times by .25 because that is 50
+  leftEyelefty = pumpnoseLefty - pumpHeight * 0.275;
+  //.275 because it is 55 pixels higher than pumpnoselefty
+  leftEyerighty = pumpnoseLefty - pumpHeight * 0.275;
+  //the left eye right x is the same as the pumpnoseleftx because they are stacked.
+
+  rightEyecenterx = pumpnoseRightx + pumpWidth * 0.125;
+  rightEyecentery = pumpnoseRighty - pumpHeight * 0.5;
+  rightEyelefty = pumpnoseRighty - pumpHeight * 0.275;
+  //the right eye left x is the pump nose left x because they are on top of eachother
+  rightEyerightx = pumpnoseRightx + pumpWidth * 0.25;
+  rightEyerighty = pumpnoseRighty - pumpHeight * 0.275;
+
+  leftPupily = leftEyecentery + pumpHeight * 0.2;
+  pupilHeight = pumpHeight * 0.1;
+  pupilWidth = pumpWidth * 0.1;
+
+  pumpCenterx = canvasWidth / 2;
+  pumpCentery = canvasHeight / 2;
+  console.log(pumpCenterx + pumpCentery);
+}
+
+function draw() {
+  background("purple");
+  drawPumpkin();
+  flicker();
+  if (on) {
+    r = 255;
+    g = 255;
+    b = 0;
+  } else {
+    r = 0;
+    g = 0;
+    b = 0;
+  }
+}
+function drawPumpkin() {
+  drawCircle();
+  drawNose();
+  drawleftEye();
+  drawrightEye();
+  drawStem();
+  drawSmile();
+}
+function drawCircle() {
+  fill(pumpColor);
+  noStroke();
+  ellipse(200, 200, pumpWidth, pumpHeight);
+}
+function drawNose() {
+  fill(r, g, b);
+  noStroke();
+  triangle(
+    pumpnoseLeftx,
+    pumpnoseLefty,
+    pumpCenterx,
+    pumpCentery,
+    pumpnoseRightx,
+    pumpnoseRighty
+  );
+}
+function drawleftEye() {
+  fill(r, g, b);
+  triangle(
+    leftEyeleftx,
+    leftEyelefty,
+    leftEyecenterx,
+    leftEyecentery,
+    pumpnoseLeftx,
+    leftEyerighty
+  );
+  drawleftPupil();
+}
+function drawrightEye() {
+  fill(r, g, b);
+  triangle(
+    pumpnoseRightx,
+    rightEyelefty,
+    rightEyecenterx,
+    rightEyecentery,
+    rightEyerightx,
+    rightEyerighty
+  );
+  drawrightPupil();
+}
+
+function drawStem() {
+  var pumpStemy = pumpCentery - pumpHeight * 0.6;
+  var pumpStemwidth = pumpWidth * 0.15;
+  var pumpStemHeight = pumpHeight * 0.25;
+  fill("green");
+  rectMode(CENTER);
+  rect(pumpCenterx, pumpStemy, pumpStemwidth, pumpStemHeight);
+}
+function drawSmile() {
+  var pumpsmileHeight = pumpHeight * 0.45;
+  var pumpsmileWidth = pumpWidth * 0.475;
+  var pumpsmileCentery = pumpCentery + pumpHeight * 0.2;
+  fill(r, g, b);
+  arc(
+    pumpCenterx,
+    pumpsmileCentery,
+    pumpsmileWidth,
+    pumpsmileHeight,
+    TWO_PI,
+    PI
+  );
+}
+
+function drawleftPupil() {
+  var mapLimitleft = leftEyeleftx + pumpWidth * 0.05;
+  var mapLimitright = pumpnoseLeftx - pumpWidth * 0.1;
+  fill(pumpColor);
+  let value = 25;
+  let m = map(mouseX, 0, canvasWidth, mapLimitleft, mapLimitright);
+  ellipse(m, leftPupily, pupilWidth, pupilHeight);
+}
+function drawrightPupil() {
+  var mapLimitleft = pumpnoseRightx + pumpWidth * 0.05;
+  var mapLimitright = rightEyerightx - pumpWidth * 0.1;
+  fill(pumpColor);
+
+  let m = map(mouseX, 0, canvasWidth, mapLimitleft, mapLimitright);
+  ellipse(m, leftPupily, pupilWidth, pupilHeight);
+}
+function flicker() {
+  if (frameCount % 100 == 0) {
+    on = !on;
+  }
+
+}
+</script></div>
+<div class="flexbox-item item-2">This is my Advanced Computer Science scaling variable project. I made a jack o lantern that has variable that scale to the given pumpkim width and pumpkin height. I did this by creating the pumpkin in a 200 by 200 width and height, then scaled all the variables created after it. One struggle that I had with this project was that I did not know how to get the background to flicker. I used frame count to create a function called flicker, which is essentially a timer. Then created a boolean value of whether or not it was on, which then changed the r, g, and b values of the background. 
+            </div>
+  </div>
+  <h1>Project 1(spring 2021): Gumball Catcher</h1>
     <div class="flexbox-container">
         <div class="flexbox-item  item-1">
             <script type="text/p5" data-height="500" data-autoplay data-preview-width="600">
-            var clicks = 0;
+            var clicks=0;
 var posofmouseX = 0;
 var speed = 1;
 var gumballX = Math.random() * 570 + 5;
@@ -222,5 +412,3 @@ function endScreen() {
    <div class="flexbox-item item-2">This is my gumball catching project from ap computer science. The goal is to catch as many gumballs as possible! The catch is that the gumballs speed gets faster and faster as you go. One difficulty I had with this project was that I was unable to get the basket to catch the gumballs. I overcame this by having the y value equal the edge of the basket, and if it didnt, you lost!
             </div>
   </div>
-    </body>
-</html>
